# anemoia01

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARGUMENT.md  BIGP3BCI_LOCAL_RUN.md  BIGP3BCI_RAW_CONTRACT.md  CLI.md  DATASET_LANDSCAPE.md  DEVELOPMENT.md  EVIDENCE_STATUS.md  FALCON_H2_BUNDLE.md  FALCON_H2_FORMAT.md  FALCON_H2_FULL_COVERAGE_RUN.md  FALCON_H2_LOCAL_RUN.md  FALCON_H2_METHOD_RUN.md  FALCON_H2_PASS2.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  LATENT_BACKENDS.md  METRICS.md  NEXT_CHAT_BRIEF.md  NEXT_STEPS.md  PASS3_METHOD_COMPARISON.md  PASS4_COMMUNICATION_AUTHORIZATION.md  PASS5_NATURALISTIC_WEAK_LABELS.md  PASS6_SELECTION_WEAK_TARGETS.md  PROTOCOLS.md  RELIABILITY.md  REPORT_CARDS.md  RESOURCE_MANIFESTS.md  SOURCE_OF_TRUTH.md  START_HERE.md  SYSTEM_MAP.md
experiments/: README.md
tests/: bigp3bci_fixtures.py  edf_fixtures.py  test_ajile12_experiment.py  test_artifact_bundle.py  test_authorization_io.py  test_authorization_labels.py  test_authorization_protocol.py  test_authorization_report.py  test_baseline_examples.py  test_baseline_io.py  test_baseline_predictions.py  test_baseline_runner.py  test_baseline_transforms.py  test_baselines.py  test_bigp3bci_artifacts.py  test_bigp3bci_events.py  test_bigp3bci_experiment.py  test_bigp3bci_inventory.py  test_card2024_experiment.py  test_cli.py  test_communication_protocol.py  test_communication_report.py  test_comparison_figure.py  test_comparison_report_rendering.py  test_cue_text.py  test_dandi_assets.py  test_edf_numeric.py  test_edit_distance.py  (+54 more)
(+126 files in other folders)
