[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentfidelity"
version = "0.1.0"
description = "Intent-fidelity evaluation infrastructure for adaptive neural interfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
intentfidelity = "intentfidelity.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/intentfidelity"]

[tool.ruff]
line-length = 88
target-version = "py311"
